= 3.4.0 (not released yet)
- Support rails4
- Quote selected columns
- More unobtrusive html views
- Move () in visibility toggle links inside so they can be overrided
- Extend datepicker to load settings from data attributes before onReady event is fired
- Add weight to action links
- Add placeholder in search form
- load existing record on render_field when id is present
- Add helper to override subform label
- embedded? checks that it is displayed embedded, add loading_embedded? to check first loading of embedded
- Fix previous page link with search and sort options when they are not stored in session
- Fix updating column in main form when subform has column with same name
- Fix sort_by :method without conditions
- Add conditional_get_support and calculate_etag options to send etag and check it with stale? rails method, avoiding rendering views and loading all page items when page is cached
- Remove row action (method exists but not as action), index with id is enough
- Use to_param in action links
- Allow to pass an array value in conditions_from_params, not only single value for columns
- Display count items when pagination is disabled
- Check security in column groups in forms
- Add refresh_link option to :select form_ui
- Sort association options in select :form_ui using column.sort_by :sql
- Support :radio form_ui in association columns
- Improve XML/JSON/YAML: return primary key, associations and virtual columns (a method must exist in model)
- Add support for :label_method option for association columns so another method can be used instead of to_label
- Support update_columns in plural associations

= 3.3.3
- Allow to override select options in active_scaffold_search_select
- Load effects from jQuery UI when using jquery-rails 3 gem
- Fix searching on nested scaffolds (broken on 3.3.2)
- Fix searching when includes is set to nil
- Send parent_controller for render_field requests on subforms for persisted records, as new records were already sending it