@@ -1,9 +1,9 @@
 <div class="active-scaffold-footer">
-<% if @page.pager.count -%>
+<% if active_scaffold_config.list.pagination != :infinite -%>
   <div class="active-scaffold-found"><span class="active-scaffold-records"><%= @page.pager.count -%></span> <%=as_(:found, :count => @page.pager.count) %></div>
 <% end -%>
 <% if active_scaffold_config.list.pagination -%>
-  <div class="active-scaffold-pagination">
+  <div class="active-scaffold-pagination<%= " auto-paginate" if active_scaffold_config.list.auto_pagination %>">
     <%= render :partial => 'list_pagination_links', :locals => { :current_page => @page } if @page.pager.infinite? || @page.pager.number_of_pages > 1 %>
   </div>
 <% end -%>
